[package]
name = "relconf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dirs = "5.0.1"
schemars = { version = "0.8.21", optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde-toml-merge = "0.3.8"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
shellexpand = { version = "3.1.0", features = ["path"] }
toml = "0.8.14"

[features]
schema = ["schemars"]
