[package]
name = "relconf"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Manage configuration depending to the current path"
homepage = "https://github.com/kfkonrad/relconf"
repository = "https://github.com/kfkonrad/relconf"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.32", features = ["cargo", "derive"] }
color-eyre = "0.6.3"
dirs = "6.0.0"
schemars = { version = "0.8.22", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde-toml-merge = "0.3.8"
serde_json = "1.0.140"
serde_yaml = "0.9.34+deprecated"
shellexpand = { version = "3.1.0", features = ["path"] }
toml = "0.8.20"

[features]
schema = ["schemars"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -2 }
nursery = { level = "deny", priority = -3 }
unwrap_used = { level = "deny", priority = -4 }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
